; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/iavf/extr_iavf_main.c_iavf_msix_aq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/iavf/extr_iavf_main.c_iavf_msix_aq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.iavf_adapter = type { i32, %struct.iavf_hw }
%struct.iavf_hw = type { i32 }

@IAVF_VFINT_ICR01 = common dso_local global i32 0, align 4
@IAVF_VFINT_ICR0_ENA1 = common dso_local global i32 0, align 4
@iavf_wq = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @iavf_msix_aq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iavf_msix_aq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.iavf_adapter*, align 8
  %7 = alloca %struct.iavf_hw*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.net_device*
  store %struct.net_device* %9, %struct.net_device** %5, align 8
  %10 = load %struct.net_device*, %struct.net_device** %5, align 8
  %11 = call %struct.iavf_adapter* @netdev_priv(%struct.net_device* %10)
  store %struct.iavf_adapter* %11, %struct.iavf_adapter** %6, align 8
  %12 = load %struct.iavf_adapter*, %struct.iavf_adapter** %6, align 8
  %13 = getelementptr inbounds %struct.iavf_adapter, %struct.iavf_adapter* %12, i32 0, i32 1
  store %struct.iavf_hw* %13, %struct.iavf_hw** %7, align 8
  %14 = load %struct.iavf_hw*, %struct.iavf_hw** %7, align 8
  %15 = load i32, i32* @IAVF_VFINT_ICR01, align 4
  %16 = call i32 @rd32(%struct.iavf_hw* %14, i32 %15)
  %17 = load %struct.iavf_hw*, %struct.iavf_hw** %7, align 8
  %18 = load i32, i32* @IAVF_VFINT_ICR0_ENA1, align 4
  %19 = call i32 @rd32(%struct.iavf_hw* %17, i32 %18)
  %20 = load i32, i32* @iavf_wq, align 4
  %21 = load %struct.iavf_adapter*, %struct.iavf_adapter** %6, align 8
  %22 = getelementptr inbounds %struct.iavf_adapter, %struct.iavf_adapter* %21, i32 0, i32 0
  %23 = call i32 @queue_work(i32 %20, i32* %22)
  %24 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %24
}

declare dso_local %struct.iavf_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @rd32(%struct.iavf_hw*, i32) #1

declare dso_local i32 @queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
